Updated failing tests to accommodate for JDK21 level changes